--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,15 @@
 body {
     margin-left: auto;
     margin-right:auto;
-    width: 800px;
+    width: 850px;
+    background-color: #fdf6e3;
+    color: #268bd2;
 }
 
 pre {
     background-color: #002b36;
     white-space: pre-wrap;
+    padding-left: 10px;
 }
 
 code {
