--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,10 @@ body {
 }
 
 h1 {
-  color: blue;
-  size: 1.2em;
+  display: block;
+  background-color : blue;
+  color: white;
+  size: 1em;
 }
 
 /* code */
